2015-03-31  Chris Dumez  <cdumez@apple.com>

        [WK2][iOS] Extend ProcessThrottler use to the NetworkProcess
        https://bugs.webkit.org/show_bug.cgi?id=143249
        <rdar://problem/20231539>

        Reviewed by Gavin Barraclough.

        Extend ProcessThrottler use to the NetworkProcess instead of only the
        WebProcesses. This is needed so that the NetworkProcess gets notified
        before suspension. We now use this notification to free-up memory
        before suspending by calling the critical memory pressure handler, as
        we already do for WebProcesses (rdar://problem/20231539). In the
        future, this infrastructure will be used to delay suspension until the
        pending SQL transactions are done as well (rdar://problem/20180799).

        Previously, the NetworkProcessProxy would hold a foreground assertion
        on behalf of the NetworkProcess but would never release that assertion.
        In this patch, we change this so that WebProcessProxies hold assertions
        on behalf of the NetworkProcess, and release those assertions before
        suspending. As a result, the NetworkProcess gets suspended when all
        WebProcesses are suspended.

        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::processWillSuspend):
        (WebKit::NetworkProcess::cancelProcessWillSuspend):
        (WebKit::NetworkProcess::processDidResume):
        * NetworkProcess/NetworkProcess.h:
        * NetworkProcess/NetworkProcess.messages.in:
        * UIProcess/Network/NetworkProcessProxy.cpp:
        (WebKit::NetworkProcessProxy::NetworkProcessProxy):
        (WebKit::NetworkProcessProxy::didFinishLaunching):
        (WebKit::NetworkProcessProxy::sendProcessWillSuspend):
        (WebKit::NetworkProcessProxy::sendCancelProcessWillSuspend):
        (WebKit::NetworkProcessProxy::didCancelProcessSuspension):
        (WebKit::NetworkProcessProxy::sendProcessDidResume):